# ShepezSketch

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  ShapezSketch.code-workspace
src/Common/: DumbTypes.h
src/Core/: AppMemory.h  CMakeLists.txt  Core.cpp  Core.h  Workbench.cpp
src/Core/Canvas/: Canvas.cpp  CanvasCamera.h  CanvasPlanes.cpp
src/Core/Explorer/: Explorer.cpp
src/Core/Scene/: Scene.h
src/Core/Toolbox/: Toolbox.cpp
src/Graphics/: CMakeLists.txt  Components.cpp  Components.h  Graphics.cpp  Graphics.h  Style.h
src/Main/: CMakeLists.txt  LibLoader.cpp  LibLoader.h  LibLoaderClass.h  main.cpp
